--- a/anxiety.html
+++ b/anxiety.html
@@ -96,9 +96,9 @@
   <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
     <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
     <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
-    <form id="chat-form" style="display:flex;gap:0.5rem;">
-      <input id="chat-input" type="text" placeholder="Type your question about anxiety..." style="flex:1;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required />
-      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;">Send</button>
+    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;" aria-label="Chat with SmartCare AI"">
+      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required aria-label="Type your question"/>
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;" aria-label="Send your question">Send</button>
     </form>
     <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
   </section>
