--- a/depression.html
+++ b/depression.html
@@ -59,7 +59,7 @@
     <section style="margin: 2em 0;">
       <h3>Watch: Overcoming Depression</h3>
       <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;">
-        <iframe src="https://www.youtube.com/embed/rqjC8b2uosE" title="Overcoming Depression" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        <iframe src="https://www.youtube.com/watch?v=Izy1TgMe-tI" title="Managing Depression" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
       </div>
     </section>
 
@@ -76,9 +76,9 @@
   <section id="chatbot-section" style="margin:3rem auto;max-width:900px;background:#f2f2f2;padding:1.5rem;border-radius:1rem;box-shadow:0 2px 12px #ddd;">
     <h3 style="margin-bottom:1rem;">💬 Ask SmartCare AI</h3>
     <div id="chat-messages" style="min-height:80px;margin-bottom:1rem;"></div>
-    <form id="chat-form" style="display:flex;gap:0.5rem;">
-      <input id="chat-input" type="text" placeholder="Type your question..." style="flex:1;padding:0.5rem 20rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required />
-      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;">Send</button>
+    <form id="chat-form" style="display:flex;gap:0.5rem;flex-wrap:wrap;" aria-label="Chat with SmartCare AI"">
+      <input id="chat-input" type="text" autocomplete="off" placeholder="Type your question..." style="flex:1;min-width:200px;padding:0.5rem 1rem;border-radius:1rem;border:1px solid #ccc;font-size:1.1rem;" required aria-label="Type your question"/>
+      <button type="submit" style="background:#7f5af0;color:#fff;border:none;border-radius:1rem;padding:0.5rem 1.5rem;font-weight:600;cursor:pointer;font-size:1.1rem;" aria-label="Send your question">Send</button>
     </form>
     <div id="chat-error" style="color:#ff3333;font-size:0.9rem;margin-top:0.5rem;"></div>
   </section>
