--- a/ocd.html
+++ b/ocd.html
@@ -15,7 +15,7 @@
       <img src="Images/logo.png" alt="Logo" style="width:110px;height:110px;border-radius:50%;margin-bottom:0;object-fit:cover;">
       <div style="flex:1;text-align:left;">
         <h1>SmartCare</h1>
-        <p>Understanding Obsessive-Compulsive Disorder (OCD)</p>
+        <p>Your Mental Health Self-Check Tool</p>
       </div>
     </div>
     <nav>
@@ -49,6 +49,14 @@
     <div style="margin-top:1.5rem;background:#eaf6ff;padding:1rem 1.5rem;border-radius:0.7rem;box-shadow:0 1px 6px #d0e6f7;">
       <strong>Did you know?</strong> OCD is common and treatable. If you or someone you know is struggling, reaching out is a sign of strength.
     </div>
+
+    <div style="margin-top:2em;">
+      <strong>Take the next step:</strong>
+      <ul>
+        <li>Try the <a href="index.html">mental health self-check</a> on the home page.</li>
+        <li>Or talk to our SmartCare AI chatbot below for support.</li>
+      </ul>
+    </div>
   </div>
 
   <!-- 🧠 Chatbot Section -->
@@ -64,7 +72,7 @@
 
   <!-- Back to Top Arrow Button -->
   <button id="back-to-top" title="Back to top" style="position:fixed;bottom:32px;right:32px;z-index:999;background:#7f5af0;color:#fff;border:none;border-radius:50%;width:48px;height:48px;box-shadow:0 2px 8px #bbb;display:none;align-items:center;justify-content:center;font-size:2rem;cursor:pointer;transition:background 0.2s;">
-    <span aria-label="Back to top" style="display:inline-block;line-height:1;">↑</span>
+    ↑
   </button>
 
   <script>
@@ -121,6 +129,19 @@
 
       // Accessibility: focus input on page load
       input.focus();
+    });
+
+    // Back to Top Arrow Logic
+    const backToTopBtn = document.getElementById('back-to-top');
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 300) {
+        backToTopBtn.style.display = 'flex';
+      } else {
+        backToTopBtn.style.display = 'none';
+      }
+    });
+    backToTopBtn.addEventListener('click', function() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
 </body>
