--- a/ptsd.html
+++ b/ptsd.html
@@ -13,7 +13,7 @@
       <img src="Images/logo.png" alt="Logo" style="width:110px;height:110px;border-radius:50%;margin-bottom:0;object-fit:cover;">
       <div style="flex:1;text-align:left;">
         <h1>SmartCare</h1>
-        <p>Understanding Post-Traumatic Stress Disorder (PTSD)</p>
+        <p>Your Mental Health Self-Check Tool</p>
       </div>
     </div>
     <nav>
@@ -43,6 +43,14 @@
       <li>Medication to manage symptoms</li>
       <li>Mindfulness and grounding techniques</li>
     </ul>
+
+    <div style="margin-top:2em;">
+      <strong>Take the next step:</strong>
+      <ul>
+        <li>Try the <a href="index.html">mental health self-check</a> on the home page.</li>
+        <li>Or talk to our SmartCare AI chatbot below for support.</li>
+      </ul>
+    </div>
   </div>
 
   <!-- 🧠 Chatbot Section -->
