--- a/depression.html
+++ b/depression.html
@@ -58,9 +58,11 @@
 
     <section style="margin: 2em 0;">
       <h3>Watch: Overcoming Depression</h3>
+    
       <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;">
-        <iframe src="https://www.youtube.com/embed/rqjC8b2uosE" title="Overcoming Depression" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        <iframe src="https://www.youtube.com/embed/ZwMlHkWKDwM" title="Understanding Depression: Signs, Symptoms, and Treatment" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
       </div>
+      <p style="margin-top:0.5em;font-size:0.98em;color:#444;">Above: Two helpful videos about overcoming and understanding depression. The first is a personal story, the second explains symptoms and treatment options.</p>
     </section>
 
     <div style="margin-top:2em;">
@@ -118,17 +120,26 @@
         e.preventDefault();
         const userMsg = input.value.trim();
         if (!userMsg) return;
-        messages.innerHTML += `<div class='chat-msg user'><b>You:</b> ${userMsg}</div>`;
+        // Show user message
+        messages.innerHTML += `<div class='chat-msg user' style="margin-bottom:8px;"><b>You:</b> ${userMsg}</div>`;
         input.value = '';
         errorDiv.textContent = '';
+        // Show typing indicator
+        const typingId = 'typing-' + Date.now();
+        messages.innerHTML += `<div id="${typingId}" class='chat-msg bot' style='color:#999;margin-bottom:8px;'>SmartCare AI is typing...</div>`;
+        messages.scrollTop = messages.scrollHeight;
         try {
-          messages.innerHTML += `<div class='chat-msg bot' style='color:#999;'>SmartCare AI is typing...</div>`;
           const response = await query({ "question": userMsg });
           const botMsg = response.text || "I'm here to help, but I didn't understand that.";
-          messages.innerHTML = messages.innerHTML.replace('SmartCare AI is typing...', '');
-          messages.innerHTML += `<div class='chat-msg bot'><b>SmartCare AI:</b> ${renderMarkdown(botMsg)}</div>`;
+          // Remove typing indicator
+          const typingDiv = document.getElementById(typingId);
+          if (typingDiv) typingDiv.remove();
+          // Show bot message
+          messages.innerHTML += `<div class='chat-msg bot' style="margin-bottom:8px;"><b>SmartCare AI:</b> ${renderMarkdown(botMsg)}</div>`;
           messages.scrollTop = messages.scrollHeight;
         } catch (err) {
+          const typingDiv = document.getElementById(typingId);
+          if (typingDiv) typingDiv.remove();
           errorDiv.textContent = 'Sorry, something went wrong.';
         }
       });
